--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"ava": "^5.1.1",
 		"boxen": "^7.0.1",
 		"delay": "^5.0.0",
+		"eslint": "8.39.0",
 		"eslint-config-xo-react": "^0.27.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
