--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
       - run: npm install
-      - run: printenv
+      - run: npm exec -- node -e "console.log(process.env)"
       - run: npm test -- --serial
         env:
           FORCE_COLOR: true
